update API version to latest main
