# libs/api/__generated__/models/ActionErrorAnyOf2.ts
@@ -1,0 +1,67 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Oxide Region API
+ * API for interacting with the Oxide control plane
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: api@oxide.computer
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+import {
+  ActionErrorAnyOf2DeserializeFailed,
+  ActionErrorAnyOf2DeserializeFailedFromJSON,
+  ActionErrorAnyOf2DeserializeFailedFromJSONTyped,
+  ActionErrorAnyOf2DeserializeFailedToJSON,
+} from './'
+
+/**
+ * The framework failed to deserialize the saga parameters, an action's successful result, or an action's error.
+ * @export
+ * @interface ActionErrorAnyOf2
+ */
+export interface ActionErrorAnyOf2 {
+  /**
+   *
+   * @type {ActionErrorAnyOf2DeserializeFailed}
+   * @memberof ActionErrorAnyOf2
+   */
+  deserializeFailed: ActionErrorAnyOf2DeserializeFailed
+}
+
+export function ActionErrorAnyOf2FromJSON(json: any): ActionErrorAnyOf2 {
+  return ActionErrorAnyOf2FromJSONTyped(json, false)
+}
+
+export function ActionErrorAnyOf2FromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): ActionErrorAnyOf2 {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    deserializeFailed: ActionErrorAnyOf2DeserializeFailedFromJSON(
+      json['DeserializeFailed']
+    ),
+  }
+}
+
+export function ActionErrorAnyOf2ToJSON(value?: ActionErrorAnyOf2 | null): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    DeserializeFailed: ActionErrorAnyOf2DeserializeFailedToJSON(
+      value.deserializeFailed
+    ),
+  }
+}
