# libs/api/__generated__/models/ApiInstanceStateAnyOf.ts
@@ -1,0 +1,46 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Oxide Region API
+ * API for interacting with the Oxide control plane
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: api@oxide.computer
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ *
+ * @export
+ * @enum {string}
+ */
+export enum ApiInstanceStateAnyOf {
+  Creating = 'creating',
+  Starting = 'starting',
+  Running = 'running',
+  Repairing = 'repairing',
+  Failed = 'failed',
+  Destroyed = 'destroyed',
+}
+
+export function ApiInstanceStateAnyOfFromJSON(
+  json: any
+): ApiInstanceStateAnyOf {
+  return ApiInstanceStateAnyOfFromJSONTyped(json, false)
+}
+
+export function ApiInstanceStateAnyOfFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): ApiInstanceStateAnyOf {
+  return json as ApiInstanceStateAnyOf
+}
+
+export function ApiInstanceStateAnyOfToJSON(
+  value?: ApiInstanceStateAnyOf | null
+): any {
+  return value as any
+}
