# libs/api/__generated__/models/ApiInstanceStateAnyOf1.ts
@@ -1,0 +1,67 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Oxide Region API
+ * API for interacting with the Oxide control plane
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: api@oxide.computer
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+import {
+  ApiInstanceStateAnyOf1Stopping,
+  ApiInstanceStateAnyOf1StoppingFromJSON,
+  ApiInstanceStateAnyOf1StoppingFromJSONTyped,
+  ApiInstanceStateAnyOf1StoppingToJSON,
+} from './'
+
+/**
+ *
+ * @export
+ * @interface ApiInstanceStateAnyOf1
+ */
+export interface ApiInstanceStateAnyOf1 {
+  /**
+   *
+   * @type {ApiInstanceStateAnyOf1Stopping}
+   * @memberof ApiInstanceStateAnyOf1
+   */
+  stopping: ApiInstanceStateAnyOf1Stopping
+}
+
+export function ApiInstanceStateAnyOf1FromJSON(
+  json: any
+): ApiInstanceStateAnyOf1 {
+  return ApiInstanceStateAnyOf1FromJSONTyped(json, false)
+}
+
+export function ApiInstanceStateAnyOf1FromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): ApiInstanceStateAnyOf1 {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    stopping: ApiInstanceStateAnyOf1StoppingFromJSON(json['stopping']),
+  }
+}
+
+export function ApiInstanceStateAnyOf1ToJSON(
+  value?: ApiInstanceStateAnyOf1 | null
+): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    stopping: ApiInstanceStateAnyOf1StoppingToJSON(value.stopping),
+  }
+}
