# libs/api/__generated__/models/ApiInstanceStateAnyOf1Stopping.ts
@@ -1,0 +1,60 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Oxide Region API
+ * API for interacting with the Oxide control plane
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: api@oxide.computer
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+/**
+ *
+ * @export
+ * @interface ApiInstanceStateAnyOf1Stopping
+ */
+export interface ApiInstanceStateAnyOf1Stopping {
+  /**
+   *
+   * @type {boolean}
+   * @memberof ApiInstanceStateAnyOf1Stopping
+   */
+  rebooting: boolean
+}
+
+export function ApiInstanceStateAnyOf1StoppingFromJSON(
+  json: any
+): ApiInstanceStateAnyOf1Stopping {
+  return ApiInstanceStateAnyOf1StoppingFromJSONTyped(json, false)
+}
+
+export function ApiInstanceStateAnyOf1StoppingFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): ApiInstanceStateAnyOf1Stopping {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    rebooting: json['rebooting'],
+  }
+}
+
+export function ApiInstanceStateAnyOf1StoppingToJSON(
+  value?: ApiInstanceStateAnyOf1Stopping | null
+): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    rebooting: value.rebooting,
+  }
+}
