# libs/api/__generated__/models/ApiSagaStateViewAnyOf1Done.ts
@@ -1,0 +1,87 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Oxide Region API
+ * API for interacting with the Oxide control plane
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: api@oxide.computer
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+import {
+  ActionError,
+  ActionErrorFromJSON,
+  ActionErrorFromJSONTyped,
+  ActionErrorToJSON,
+} from './'
+
+/**
+ *
+ * @export
+ * @interface ApiSagaStateViewAnyOf1Done
+ */
+export interface ApiSagaStateViewAnyOf1Done {
+  /**
+   *
+   * @type {ActionError}
+   * @memberof ApiSagaStateViewAnyOf1Done
+   */
+  errorInfo?: ActionError
+  /**
+   *
+   * @type {string}
+   * @memberof ApiSagaStateViewAnyOf1Done
+   */
+  errorNodeName?: string
+  /**
+   *
+   * @type {boolean}
+   * @memberof ApiSagaStateViewAnyOf1Done
+   */
+  failed: boolean
+}
+
+export function ApiSagaStateViewAnyOf1DoneFromJSON(
+  json: any
+): ApiSagaStateViewAnyOf1Done {
+  return ApiSagaStateViewAnyOf1DoneFromJSONTyped(json, false)
+}
+
+export function ApiSagaStateViewAnyOf1DoneFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): ApiSagaStateViewAnyOf1Done {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    errorInfo: !exists(json, 'errorInfo')
+      ? undefined
+      : ActionErrorFromJSON(json['errorInfo']),
+    errorNodeName: !exists(json, 'errorNodeName')
+      ? undefined
+      : json['errorNodeName'],
+    failed: json['failed'],
+  }
+}
+
+export function ApiSagaStateViewAnyOf1DoneToJSON(
+  value?: ApiSagaStateViewAnyOf1Done | null
+): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    errorInfo: ActionErrorToJSON(value.errorInfo),
+    errorNodeName: value.errorNodeName,
+    failed: value.failed,
+  }
+}
