# libs/api/__generated__/nexus-openapi.json
@@ -940,10 +940,164 @@
           }
         }
       }
+    },
+    "/sagas": {
+      "get": {
+        "description": "List all sagas (for debugging)",
+        "operationId": "api_sagas_get",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "limit",
+            "schema": {
+              "description": "Maximum number of items returned by a single call",
+              "type": "integer",
+              "format": "uint32",
+              "minimum": 1
+            },
+            "style": "form"
+          },
+          {
+            "in": "query",
+            "name": "page_token",
+            "schema": {
+              "description": "Token returned by previous call to retreive the subsequent page",
+              "type": "string"
+            },
+            "style": "form"
+          },
+          {
+            "in": "query",
+            "name": "sort_by",
+            "schema": {
+              "$ref": "#/components/schemas/ApiIdSortMode"
+            },
+            "style": "form"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiSagaViewResultsPage"
+                }
+              }
+            }
+          }
+        },
+        "x-dropshot-pagination": true
+      }
+    },
+    "/sagas/{saga_id}": {
+      "get": {
+        "description": "Fetch information about a single saga (for debugging)",
+        "operationId": "api_sagas_get_saga",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "saga_id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            },
+            "style": "simple"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiSagaView"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
+      "ActionError": {
+        "description": "An error produced by a saga action\n\nOn failure, actions always return an `ActionError`.  This type can represent a failure from Steno itself or a failure produced by the consumer (e.g., an action whose body fails for some reason).  The various specific errors are documented below.\n\nYou can use your own error type with [`ActionError`].  As long as it meets the requirements of [`ActionData`], you can wrap your error in an [`ActionError::ActionFailed`] variant using [`ActionError::action_failed()`]. Given an [`ActionError::ActionFailed`] variant, you can get your specific type back out again using [`ActionError::convert()`].\n\nNote that the conversion back to your specific error type can fail!  This looks like a downcast, but it's not.  `ActionError`s are typically recorded in the saga log and interpreted later, possibly after a crash and recovery. Whether there was an intervening crash or not, the conversion here deserializes the error from the log into your custom error type.  This won't work if your error type is incompatible with the one that was used to serialize the error in the first place.\n\n# Example\n\n```rust use serde::Deserialize; use serde::Serialize; use steno::ActionError;\n\n#[derive(Debug, Deserialize, Serialize)] struct MyError { message: String }\n\nfn my_func_that_fails() -> Result<(), ActionError> { Err(ActionError::action_failed(MyError { message: \"boom!\".to_owned() })) }\n\nfn handle_error(error: ActionError) { match error.convert::<MyError>() { Ok(my_error) => { eprintln!(\"my action failed because: {}\", my_error.message); } Err(other_error) => { eprintln!( \"my action failed because the framework had a problem: {}\", other_error.to_string() ); } } } ```",
+        "anyOf": [
+          {
+            "type": "string",
+            "enum": ["InjectedError"]
+          },
+          {
+            "description": "Action failed due to a consumer-specific error",
+            "type": "object",
+            "properties": {
+              "ActionFailed": {
+                "type": "object",
+                "properties": {
+                  "source_error": {}
+                },
+                "required": ["source_error"]
+              }
+            },
+            "required": ["ActionFailed"],
+            "additionalProperties": false
+          },
+          {
+            "description": "The framework failed to deserialize the saga parameters, an action's successful result, or an action's error.",
+            "type": "object",
+            "properties": {
+              "DeserializeFailed": {
+                "type": "object",
+                "properties": {
+                  "message": {
+                    "type": "string"
+                  }
+                },
+                "required": ["message"]
+              }
+            },
+            "required": ["DeserializeFailed"],
+            "additionalProperties": false
+          },
+          {
+            "description": "The framework failed to serialize the saga parameters, an action's successful result, or an action's error.",
+            "type": "object",
+            "properties": {
+              "SerializeFailed": {
+                "type": "object",
+                "properties": {
+                  "message": {
+                    "type": "string"
+                  }
+                },
+                "required": ["message"]
+              }
+            },
+            "required": ["SerializeFailed"],
+            "additionalProperties": false
+          },
+          {
+            "description": "The framework failed to create the requested subsaga",
+            "type": "object",
+            "properties": {
+              "SubsagaCreateFailed": {
+                "type": "object",
+                "properties": {
+                  "message": {
+                    "type": "string"
+                  }
+                },
+                "required": ["message"]
+              }
+            },
+            "required": ["SubsagaCreateFailed"],
+            "additionalProperties": false
+          }
+        ]
+      },
       "ApiByteCount": {
         "description": "A count of bytes, typically used either for memory or storage capacity\n\nThe maximum supported byte count is [`i64::MAX`].  This makes it somewhat inconvenient to define constructors: a u32 constructor can be infallible, but an i64 constructor can fail (if the value is negative) and a u64 constructor can fail (if the value is larger than i64::MAX).  We provide all of these for consumers' convenience.",
         "type": "integer",
@@ -1170,16 +1324,50 @@
       },
       "ApiInstanceState": {
         "description": "Running state of an Instance (primarily: booted or stopped)\n\nThis typically reflects whether it's starting, running, stopping, or stopped, but also includes states related to the Instance's lifecycle",
-        "type": "string",
-        "enum": [
-          "creating",
-          "starting",
-          "running",
-          "stopping",
-          "stopped",
-          "repairing",
-          "failed",
-          "destroyed"
+        "anyOf": [
+          {
+            "type": "string",
+            "enum": [
+              "creating",
+              "starting",
+              "running",
+              "repairing",
+              "failed",
+              "destroyed"
+            ]
+          },
+          {
+            "type": "object",
+            "properties": {
+              "stopping": {
+                "type": "object",
+                "properties": {
+                  "rebooting": {
+                    "type": "boolean"
+                  }
+                },
+                "required": ["rebooting"]
+              }
+            },
+            "required": ["stopping"],
+            "additionalProperties": false
+          },
+          {
+            "type": "object",
+            "properties": {
+              "stopped": {
+                "type": "object",
+                "properties": {
+                  "rebooting": {
+                    "type": "boolean"
+                  }
+                },
+                "required": ["rebooting"]
+              }
+            },
+            "required": ["stopped"],
+            "additionalProperties": false
+          }
         ]
       },
       "ApiInstanceView": {
@@ -1361,6 +1549,67 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/ApiRackView"
+            }
+          },
+          "next_page": {
+            "description": "token used to fetch the next page of results (if any)",
+            "type": "string"
+          }
+        },
+        "required": ["items"]
+      },
+      "ApiSagaStateView": {
+        "anyOf": [
+          {
+            "type": "string",
+            "enum": ["running"]
+          },
+          {
+            "type": "object",
+            "properties": {
+              "done": {
+                "type": "object",
+                "properties": {
+                  "errorInfo": {
+                    "$ref": "#/components/schemas/ActionError"
+                  },
+                  "errorNodeName": {
+                    "type": "string"
+                  },
+                  "failed": {
+                    "type": "boolean"
+                  }
+                },
+                "required": ["failed"]
+              }
+            },
+            "required": ["done"],
+            "additionalProperties": false
+          }
+        ]
+      },
+      "ApiSagaView": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "state": {
+            "$ref": "#/components/schemas/ApiSagaStateView"
+          }
+        },
+        "required": ["id", "state"]
+      },
+      "ApiSagaViewResultsPage": {
+        "description": "A single page of results",
+        "type": "object",
+        "properties": {
+          "items": {
+            "description": "list of items on this page of results",
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ApiSagaView"
             }
           },
           "next_page": {
